# Advanced-File-Filter-Bot

./: .env.example  .gitignore  AUDIT-TODO.md  BUG_AUDIT.md  CACHE_AUDIT.md  Dockerfile  FEATURE_ROADMAP.md  KEEP.md  LICENSE  MIGRATION.md  MULTI_DATABASE_GUIDE.md  POTENTIAL_ISSUES.md  README.MD  README.md  REFACTORING_OPPORTUNITIES.md  ROLLOUT_PLAN.md  bot.py  docker-compose.yml  migrate_media_metadata.py  pyproject.toml  railway-setup.py  railway.toml  redis.conf  requirements.txt  sample.env  start.sh  update.py  validate_html.py  vulture_whitelist.py
.claude/: settings.local.json
audits/: cross_reference_map.json  quick-wins.md
config/: __init__.py  settings.py
core/: constants.py  exceptions.py
core/cache/: config.py  enhanced_cache.py  invalidation.py  monitor.py  redis_cache.py  serialization.py
core/concurrency/: __init__.py  semaphore_manager.py
core/database/: base.py  batch_ops.py  indexes.py  multi_pool.py  pool.py
core/services/: bot_settings.py  broadcast.py  connection.py  features.py  file_access.py  filestore.py  filter.py  indexing.py  maintainence.py  maintenance.py  recommendation.py  search_history.py  search_results.py
core/session/: __init__.py  manager.py
core/utils/: button_builder.py  caption.py  error_formatter.py  errors.py  feature_search.py  file_emoji.py  file_reference.py  file_type.py  guards.py  helpers.py  link_parser.py  logger.py  media_extractor.py  media_factory.py  messages.py  pagination.py  performance.py  premium.py  rate_limiter.py  search_results.py  subscription.py  telegram_api.py  text_fmt.py  validators.py  verify_alignment.py
docs/: ADMIN_GUIDE.md  CONFIGURATION.md  developer-audit-notes.md  html-newlines-policy.md
docs/architecture/: README.md  diagrams.md
docs/features/: collection_crud.md  premium_duration_consistency.md  realtime_ux.md  reporting_and_favorites.md
docs/portfolio/: README-Portfolio.md  demo-script.md  engineering-issues-solved.md  portfolio-checklist.md  resume-and-interview-kit.md
handlers/: base.py  channel.py  commands.py  connection.py  decorators.py  deeplink.py  delete.py  features.py  filestore.py  filter.py  indexing.py  manager.py  request.py  search.py
handlers/callbacks_handlers/: __init__.py  file.py  filter.py  pagination.py  subscription.py  user.py
handlers/commands_handlers/: __init__.py  admin.py  base.py  bot_settings.py  channel.py  database.py  user.py
logs/: bot.txt
redis-config/: redis.conf
repositories/: batch_link.py  bot_settings.py  channel.py  connection.py  features.py  filter.py  media.py  user.py
repositories/optimizations/: __init__.py  batch_operations.py
tests/: conftest.py  test_access_and_quota.py  test_admin_observability.py  test_batch_links.py  test_broadcast.py  test_cache_audit.py  test_command_auto_delete.py  test_configuration_and_packaging.py  test_feature_crud.py  test_feature_rollout.py  test_handler_alignment.py  test_indexing_and_channel.py  test_plain_text_surfaces.py  test_recommendations_and_similarity.py  test_search_command_routing.py  test_session_and_cache.py
